--- a/data/main.ipynb
+++ b/data/main.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "<caption>A tibble: 192 × 9</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>Pregnancies</th><th scope=col>Glucose</th><th scope=col>BloodPressure</th><th scope=col>SkinThickness</th><th scope=col>Insulin</th><th scope=col>BMI</th><th scope=col>DiabetesPedigreeFunction</th><th scope=col>Age</th><th scope=col>Outcome</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
        "\t<tr><td> 0</td><td>137</td><td>40</td><td>35</td><td>168</td><td>43.1</td><td>2.288</td><td>33</td><td>1</td></tr>\n",
@@ -221,7 +221,7 @@
        "A tibble: 192 × 9\n",
        "\\begin{tabular}{lllllllll}\n",
        " Pregnancies & Glucose & BloodPressure & SkinThickness & Insulin & BMI & DiabetesPedigreeFunction & Age & Outcome\\\\\n",
-       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <fct>\\\\\n",
        "\\hline\n",
        "\t  0 & 137 & 40 & 35 & 168 & 43.1 & 2.288 & 33 & 1\\\\\n",
        "\t 10 & 168 & 74 &  0 &   0 & 38.0 & 0.537 & 34 & 1\\\\\n",
@@ -236,7 +236,7 @@
        "\n",
        "A tibble: 192 × 9\n",
        "\n",
-       "| Pregnancies &lt;dbl&gt; | Glucose &lt;dbl&gt; | BloodPressure &lt;dbl&gt; | SkinThickness &lt;dbl&gt; | Insulin &lt;dbl&gt; | BMI &lt;dbl&gt; | DiabetesPedigreeFunction &lt;dbl&gt; | Age &lt;dbl&gt; | Outcome &lt;dbl&gt; |\n",
+       "| Pregnancies &lt;dbl&gt; | Glucose &lt;dbl&gt; | BloodPressure &lt;dbl&gt; | SkinThickness &lt;dbl&gt; | Insulin &lt;dbl&gt; | BMI &lt;dbl&gt; | DiabetesPedigreeFunction &lt;dbl&gt; | Age &lt;dbl&gt; | Outcome &lt;fct&gt; |\n",
        "|---|---|---|---|---|---|---|---|---|\n",
        "|  0 | 137 | 40 | 35 | 168 | 43.1 | 2.288 | 33 | 1 |\n",
        "| 10 | 168 | 74 |  0 |   0 | 38.0 | 0.537 | 34 | 1 |\n",
@@ -282,52 +282,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`summarise()` ungrouping output (override with `.groups` argument)\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "ERROR",
-     "evalue": "Error in nearest_neighbor(weight_func = \"rectangular\", neighbour = tune()): unused argument (neighbour = tune())\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in nearest_neighbor(weight_func = \"rectangular\", neighbour = tune()): unused argument (neighbour = tune())\nTraceback:\n",
-      "1. nearest_neighbor(weight_func = \"rectangular\", neighbour = tune()) %>% \n .     set_engine(\"kknn\") %>% set_mode(\"classification\")",
-      "2. eval(lhs, parent, parent)",
-      "3. eval(lhs, parent, parent)"
-     ]
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A grouped_df: 2 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Outcome</th><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0</td><td>375</td></tr>\n",
+       "\t<tr><td>1</td><td>201</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A grouped\\_df: 2 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " Outcome & n\\\\\n",
+       " <fct> & <int>\\\\\n",
+       "\\hline\n",
+       "\t 0 & 375\\\\\n",
+       "\t 1 & 201\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A grouped_df: 2 × 2\n",
+       "\n",
+       "| Outcome &lt;fct&gt; | n &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| 0 | 375 |\n",
+       "| 1 | 201 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  Outcome n  \n",
+       "1 0       375\n",
+       "2 1       201"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "diabetes_count <- diabetes_training %>%\n",
     "    group_by(Outcome) %>%\n",
-    "    summarize(n=n()) \n",
+    "    count(Outcome)\n",
+    "\n",
+    "diabetes_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 18 × 7</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>neighbors</th><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>mean</th><th scope=col>n</th><th scope=col>std_err</th><th scope=col>.config</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>accuracy</td><td>binary</td><td>0.7030885</td><td>5</td><td>0.02040003</td><td>Model1</td></tr>\n",
+       "\t<tr><td>1</td><td>roc_auc </td><td>binary</td><td>0.6611585</td><td>5</td><td>0.02032958</td><td>Model1</td></tr>\n",
+       "\t<tr><td>4</td><td>accuracy</td><td>binary</td><td>0.7291604</td><td>5</td><td>0.01813247</td><td>Model2</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>13</td><td>roc_auc </td><td>binary</td><td>0.7999618</td><td>5</td><td>0.02482711</td><td>Model8</td></tr>\n",
+       "\t<tr><td>15</td><td>accuracy</td><td>binary</td><td>0.7447676</td><td>5</td><td>0.01027458</td><td>Model9</td></tr>\n",
+       "\t<tr><td>15</td><td>roc_auc </td><td>binary</td><td>0.8073959</td><td>5</td><td>0.02417428</td><td>Model9</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 18 × 7\n",
+       "\\begin{tabular}{lllllll}\n",
+       " neighbors & .metric & .estimator & mean & n & std\\_err & .config\\\\\n",
+       " <int> & <chr> & <chr> & <dbl> & <int> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t 1 & accuracy & binary & 0.7030885 & 5 & 0.02040003 & Model1\\\\\n",
+       "\t 1 & roc\\_auc  & binary & 0.6611585 & 5 & 0.02032958 & Model1\\\\\n",
+       "\t 4 & accuracy & binary & 0.7291604 & 5 & 0.01813247 & Model2\\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 13 & roc\\_auc  & binary & 0.7999618 & 5 & 0.02482711 & Model8\\\\\n",
+       "\t 15 & accuracy & binary & 0.7447676 & 5 & 0.01027458 & Model9\\\\\n",
+       "\t 15 & roc\\_auc  & binary & 0.8073959 & 5 & 0.02417428 & Model9\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 18 × 7\n",
+       "\n",
+       "| neighbors &lt;int&gt; | .metric &lt;chr&gt; | .estimator &lt;chr&gt; | mean &lt;dbl&gt; | n &lt;int&gt; | std_err &lt;dbl&gt; | .config &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| 1 | accuracy | binary | 0.7030885 | 5 | 0.02040003 | Model1 |\n",
+       "| 1 | roc_auc  | binary | 0.6611585 | 5 | 0.02032958 | Model1 |\n",
+       "| 4 | accuracy | binary | 0.7291604 | 5 | 0.01813247 | Model2 |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| 13 | roc_auc  | binary | 0.7999618 | 5 | 0.02482711 | Model8 |\n",
+       "| 15 | accuracy | binary | 0.7447676 | 5 | 0.01027458 | Model9 |\n",
+       "| 15 | roc_auc  | binary | 0.8073959 | 5 | 0.02417428 | Model9 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   neighbors .metric  .estimator mean      n std_err    .config\n",
+       "1  1         accuracy binary     0.7030885 5 0.02040003 Model1 \n",
+       "2  1         roc_auc  binary     0.6611585 5 0.02032958 Model1 \n",
+       "3  4         accuracy binary     0.7291604 5 0.01813247 Model2 \n",
+       "⋮  ⋮         ⋮        ⋮          ⋮         ⋮ ⋮          ⋮      \n",
+       "16 13        roc_auc  binary     0.7999618 5 0.02482711 Model8 \n",
+       "17 15        accuracy binary     0.7447676 5 0.01027458 Model9 \n",
+       "18 15        roc_auc  binary     0.8073959 5 0.02417428 Model9 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "set.seed(2020)\n",
+    "\n",
+    "diabetes_count <- diabetes_training %>%\n",
+    "    group_by(Outcome) %>%\n",
+    "    count(Outcome)\n",
     "\n",
     "diabetes_training_recipe <- recipe(Outcome ~ Pregnancies + Glucose + BloodPressure + Insulin + BMI + DiabetesPedigreeFunction + Age, \n",
-    "                                  data = diabetes_training) %>%\n",
-    "   step_scale(all_predictors()) %>%\n",
+    "                                   data = diabetes_training) %>%\n",
+    "    step_scale(all_predictors()) %>%\n",
     "    step_center(all_predictors())\n",
     "\n",
-    "diabetes_training_knn <- nearest_neighbor(weight_func = \"rectangular\", neighbour = tune()) %>% \n",
+    "diabetes_train_fold <- vfold_cv(diabetes_training, v = 5, strata = Outcome)\n",
+    "\n",
+    "diabetes_training_knn <- nearest_neighbor(weight_func = \"rectangular\", neighbors = tune()) %>% \n",
     "    set_engine(\"kknn\") %>% \n",
     "    set_mode(\"classification\")\n",
-    "\n",
-    "diabetes_train_fold <- vfold_cv(diabetes_training, v=5, strata= Outcome)\n",
     "\n",
     "diabetes_train_w <- workflow() %>%\n",
     "    add_recipe(diabetes_training_recipe) %>% \n",
     "    add_model(diabetes_training_knn) %>% \n",
-    "    tune_grid(resamples=diabetes_train_fold, grid =10) %>%\n",
-    "    collect_metrics\n",
-    "   "
+    "    #fit_resample(resample = diabetes_train_vfold) \n",
+    "    tune_grid(resamples = diabetes_train_fold, grid =10) %>%\n",
+    "    collect_metrics()\n",
+    "\n",
+    "diabetes_train_w"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
