New checkpoint in format
I just formatted it but the last part still needs to be deleted

--- a/data/Group Proposal.ipynb
+++ b/data/Group Proposal.ipynb
@@ -13,27 +13,7 @@
     "    We seek to explore the following question: Can we determine if a woman has diabetes based on predictors such as blood glucose levels, blood pressure, number of pregnancies, insulin levels, BMI, age, skin thickness, and genetics (called diabetes pedigree function)? To answer this question, we use data collected by the National Institute of Diabetes and Digestive and Kidney Diseases. The particular data set surveyed women over the age of 21 of Pima Indian heritage(2).\n",
     "    \n",
     "\n",
-    "**Methodology**\n",
-    "\n",
-    "**Expected Outcomes and Significance**\n",
-    "\n",
-    "    We expect to find, based on our exploratory data, that (predictors) are the best predictors of diabetes in women of Pima Indian descent. We will further test these indicators during the construction of the predictive model.\n",
-    "\n",
-    "    The impact of this is that a robust predictive model can be constructed from our chosen data set, which can be employed to achieve early prediction of diabetes. \n",
-    "\n",
-    "    If the model proves to be accurate, it can be trained on various new datasets and different demographics of testing data, to become more accurate to more ethnic/hereditary backgrounds in women, with the goal of being a universally accepted and accurate model for diabetes prediction in women. \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "**References**\n",
-    "\n",
-    "    Diabetes Dataset. (2020, 8 5). Kaggle. Retrieved 3 3, 2022, from https://www.kaggle.com/mathchi/diabetes-data-set\n",
-    "    Mayo Clinic Staff. (2020, 10 30). Diabetes. Mayo Clinic. Retrieved 3 3, 2022, from https://www.mayoclinic.org/diseases-conditions/diabetes/symptoms-causes/syc-20371444\n",
-    "\n",
-    "    (1)  Mayo Clinic Staff. (2020, 10 30). Diabetes. Mayo Clinic. Retrieved 3 3, 2022, from https://www.mayoclinic.org/diseases-conditions/diabetes/symptoms-causes/syc-20371444\n",
-    "    \n",
-    "    (2)  Diabetes Dataset. (2020, 8 5). Kaggle. Retrieved 3 3, 2022, from https://www.kaggle.com/mathchi/diabetes-data-set"
+    "**Preliminary Exploratory Data Analysis**"
    ]
   },
   {
@@ -654,6 +634,39 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Methodology**\n",
+    "    \n",
+    "    We plan to use only the most relevant columns which help us conclude whether or not a person has diabetes or not. We will conduct our data analysis by comparing variables to find the best correlation and determine if there are groupings of the “Outcome” column, which will help us decide on the most relevant indicators. Hence, we would visualize the result through a histogram to demonstrate the distribution of all the indicators. After choosing the most relevant indicators, we will construct an effective and accurate prediction model using our chosen data set.\n",
+    "\n",
+    "**Expected Outcomes and Significance**\n",
+    "\n",
+    "    We expect to find, based on our exploratory data, that (predictors) are the best predictors of diabetes in women of Pima Indian descent. We will further test these indicators during the construction of the predictive model.\n",
+    "\n",
+    "    The impact of this is that a robust predictive model can be constructed from our chosen data set, which can be employed to achieve early prediction of diabetes. \n",
+    "\n",
+    "    If the model proves to be accurate, it can be trained on various new datasets and different demographics of testing data, to become more accurate to more ethnic/hereditary backgrounds in women, with the goal of being a universally accepted and accurate model for diabetes prediction in women. \n",
+    "\n",
+    "**References**\n",
+    "\n",
+    "    Diabetes Dataset. (2020, 8 5). Kaggle. Retrieved 3 3, 2022, from https://www.kaggle.com/mathchi/diabetes-data-set\n",
+    "    Mayo Clinic Staff. (2020, 10 30). Diabetes. Mayo Clinic. Retrieved 3 3, 2022, from https://www.mayoclinic.org/diseases-conditions/diabetes/symptoms-causes/syc-20371444\n",
+    "\n",
+    "    (1)  Mayo Clinic Staff. (2020, 10 30). Diabetes. Mayo Clinic. Retrieved 3 3, 2022, from https://www.mayoclinic.org/diseases-conditions/diabetes/symptoms-causes/syc-20371444\n",
+    "    \n",
+    "    (2)  Diabetes Dataset. (2020, 8 5). Kaggle. Retrieved 3 3, 2022, from https://www.kaggle.com/mathchi/diabetes-data-set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**THIS WAS WHAT WAS HERE BEFORE**"
    ]
   },
   {
