Errors are all figures out and pushed!

--- a/data/Final Group 41.ipynb
+++ b/data/Final Group 41.ipynb
@@ -216,76 +216,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in mean.default(Outcome):\n",
-      "“argument is not numeric or logical: returning NA”\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 1 × 9</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>mean_Pregnancies</th><th scope=col>mean_Glucose</th><th scope=col>mean_BloodPressure</th><th scope=col>mean_SkinThickness</th><th scope=col>mean_Insulin</th><th scope=col>mean_BMI</th><th scope=col>mean_DiabetesPedigreeFunction</th><th scope=col>mean_Age</th><th scope=col>mean_Outcome</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>3.845052</td><td>120.8945</td><td>69.10547</td><td>20.53646</td><td>79.79948</td><td>31.99258</td><td>0.4718763</td><td>33.24089</td><td>NA</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 1 × 9\n",
-       "\\begin{tabular}{lllllllll}\n",
-       " mean\\_Pregnancies & mean\\_Glucose & mean\\_BloodPressure & mean\\_SkinThickness & mean\\_Insulin & mean\\_BMI & mean\\_DiabetesPedigreeFunction & mean\\_Age & mean\\_Outcome\\\\\n",
-       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t 3.845052 & 120.8945 & 69.10547 & 20.53646 & 79.79948 & 31.99258 & 0.4718763 & 33.24089 & NA\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 1 × 9\n",
-       "\n",
-       "| mean_Pregnancies &lt;dbl&gt; | mean_Glucose &lt;dbl&gt; | mean_BloodPressure &lt;dbl&gt; | mean_SkinThickness &lt;dbl&gt; | mean_Insulin &lt;dbl&gt; | mean_BMI &lt;dbl&gt; | mean_DiabetesPedigreeFunction &lt;dbl&gt; | mean_Age &lt;dbl&gt; | mean_Outcome &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|---|---|---|---|\n",
-       "| 3.845052 | 120.8945 | 69.10547 | 20.53646 | 79.79948 | 31.99258 | 0.4718763 | 33.24089 | NA |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  mean_Pregnancies mean_Glucose mean_BloodPressure mean_SkinThickness\n",
-       "1 3.845052         120.8945     69.10547           20.53646          \n",
-       "  mean_Insulin mean_BMI mean_DiabetesPedigreeFunction mean_Age mean_Outcome\n",
-       "1 79.79948     31.99258 0.4718763                     33.24089 NA          "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "ename": "ERROR",
-     "evalue": "Error: Problem with `summarise()` input `max_Outcome`.\n\u001b[31m✖\u001b[39m ‘max’ not meaningful for factors\n\u001b[34mℹ\u001b[39m Input `max_Outcome` is `max(Outcome)`.\n",
+     "evalue": "Error in parse(text = x, srcfile = src): <text>:35:1: unexpected symbol\n34:                                        \n35: summary_of_data_diabetes_min\n    ^\n",
      "output_type": "error",
      "traceback": [
-      "Error: Problem with `summarise()` input `max_Outcome`.\n\u001b[31m✖\u001b[39m ‘max’ not meaningful for factors\n\u001b[34mℹ\u001b[39m Input `max_Outcome` is `max(Outcome)`.\nTraceback:\n",
-      "1. summarize(diabetes, max_Pregnancies = max(Pregnancies), max_Glucose = max(Glucose), \n .     max_BloodPressure = max(BloodPressure), max_SkinThickness = max(SkinThickness), \n .     max_Insulin = max(Insulin), max_BMI = max(BMI), max_DiabetesPedigreeFunction = max(DiabetesPedigreeFunction), \n .     max_Age = max(Age), max_Outcome = max(Outcome))",
-      "2. summarise.data.frame(diabetes, max_Pregnancies = max(Pregnancies), \n .     max_Glucose = max(Glucose), max_BloodPressure = max(BloodPressure), \n .     max_SkinThickness = max(SkinThickness), max_Insulin = max(Insulin), \n .     max_BMI = max(BMI), max_DiabetesPedigreeFunction = max(DiabetesPedigreeFunction), \n .     max_Age = max(Age), max_Outcome = max(Outcome))",
-      "3. summarise_cols(.data, ...)",
-      "4. withCallingHandlers({\n .     for (i in seq_along(dots)) {\n .         quo <- dots[[i]]\n .         chunks[[i]] <- mask$eval_all_summarise(quo)\n .         mask$across_cache_reset()\n .         result_type <- types[[i]] <- withCallingHandlers(vec_ptype_common(!!!chunks[[i]]), \n .             vctrs_error_incompatible_type = function(cnd) {\n .                 abort(class = \"dplyr:::error_summarise_incompatible_combine\", \n .                   parent = cnd)\n .             })\n .         if ((is.null(dots_names) || dots_names[i] == \"\") && is.data.frame(result_type)) {\n .             map2(seq_along(result_type), names(result_type), \n .                 function(j, nm) {\n .                   mask$add(nm, pluck(chunks[[i]], j))\n .                 })\n .         }\n .         else {\n .             mask$add(auto_named_dots[i], chunks[[i]])\n .         }\n .     }\n .     recycle_info <- .Call(dplyr_summarise_recycle_chunks, chunks, \n .         mask$get_rows(), types)\n .     chunks <- recycle_info$chunks\n .     sizes <- recycle_info$sizes\n .     for (i in seq_along(dots)) {\n .         result <- vec_c(!!!chunks[[i]], .ptype = types[[i]])\n .         if ((is.null(dots_names) || dots_names[i] == \"\") && is.data.frame(result)) {\n .             cols[names(result)] <- result\n .         }\n .         else {\n .             cols[[auto_named_dots[i]]] <- result\n .         }\n .     }\n . }, error = function(e) {\n .     local_call_step(dots = dots, .index = i, .fn = \"summarise\", \n .         .dot_data = inherits(e, \"rlang_error_data_pronoun_not_found\"))\n .     call_step <- peek_call_step()\n .     error_name <- call_step$error_name\n .     if (inherits(e, \"dplyr:::error_summarise_incompatible_combine\")) {\n .         bullets <- c(x = glue(\"Input `{error_name}` must return compatible vectors across groups\", \n .             .envir = peek_call_step()), i = cnd_bullet_combine_details(e$parent$x, \n .             e$parent$x_arg), i = cnd_bullet_combine_details(e$parent$y, \n .             e$parent$y_arg))\n .     }\n .     else if (inherits(e, \"dplyr:::summarise_unsupported_type\")) {\n .         bullets <- c(x = glue(\"Input `{error_name}` must be a vector, not {friendly_type_of(result)}.\", \n .             result = e$result), i = cnd_bullet_rowwise_unlist())\n .     }\n .     else if (inherits(e, \"dplyr:::summarise_incompatible_size\")) {\n .         peek_mask()$set_current_group(e$group)\n .         bullets <- c(x = glue(\"Input `{error_name}` must be size {or_1(expected_size)}, not {size}.\", \n .             expected_size = e$expected_size, size = e$size), \n .             i = glue(\"An earlier column had size {expected_size}.\", \n .                 expected_size = e$expected_size))\n .     }\n .     else {\n .         bullets <- c(x = conditionMessage(e))\n .     }\n .     bullets <- c(cnd_bullet_header(), bullets, i = cnd_bullet_input_info())\n .     if (!inherits(e, \"dplyr:::error_summarise_incompatible_combine\")) {\n .         bullets <- c(bullets, i = cnd_bullet_cur_group_label())\n .     }\n .     abort(bullets, class = \"dplyr_error\")\n . })",
-      "5. mask$eval_all_summarise(quo)",
-      "6. Summary.factor(structure(c(2L, 1L, 2L, 1L, 2L, 1L, 2L, 1L, 2L, \n . 2L, 1L, 2L, 1L, 2L, 2L, 2L, 2L, 2L, 1L, 2L, 1L, 1L, 2L, 2L, 2L, \n . 2L, 2L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 2L, 2L, 2L, 1L, \n . 1L, 1L, 2L, 1L, 2L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 2L, \n . 1L, 1L, 1L, 1L, 2L, 1L, 1L, 2L, 1L, 2L, 1L, 1L, 1L, 2L, 1L, 2L, \n . 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, \n . 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, 1L, \n . 1L, 1L, 1L, 1L, 2L, 2L, 2L, 1L, 1L, 2L, 2L, 2L, 1L, 1L, 1L, 2L, \n . 1L, 1L, 1L, 2L, 2L, 1L, 1L, 2L, 2L, 2L, 2L, 2L, 1L, 1L, 1L, 1L, \n . 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, \n . 1L, 2L, 2L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, \n . 1L, 2L, 2L, 1L, 1L, 1L, 2L, 1L, 2L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, \n . 2L, 2L, 2L, 2L, 2L, 1L, 1L, 2L, 2L, 1L, 2L, 1L, 2L, 2L, 2L, 1L, \n . 1L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, 2L, 1L, 1L, 1L, 2L, 2L, 2L, 2L, \n . 1L, 2L, 2L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 2L, 2L, 1L, \n . 1L, 1L, 2L, 2L, 2L, 2L, 1L, 1L, 1L, 2L, 2L, 1L, 2L, 1L, 1L, 1L, \n . 1L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, 2L, 1L, 2L, 1L, 1L, 2L, \n . 1L, 2L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, \n . 1L, 1L, 2L, 2L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, 2L, 2L, 1L, 1L, 2L, \n . 1L, 2L, 1L, 2L, 2L, 1L, 2L, 1L, 1L, 2L, 1L, 2L, 2L, 1L, 1L, 2L, \n . 1L, 2L, 1L, 1L, 2L, 1L, 2L, 1L, 2L, 2L, 2L, 1L, 1L, 2L, 1L, 2L, \n . 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, \n . 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 2L, 2L, 2L, 1L, 2L, 2L, \n . 1L, 1L, 2L, 1L, 1L, 2L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, 1L, 2L, 1L, \n . 1L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 2L, 2L, 1L, 1L, 2L, 1L, \n . 1L, 2L, 1L, 1L, 2L, 1L, 2L, 2L, 1L, 2L, 1L, 2L, 1L, 2L, 1L, 2L, \n . 2L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, 2L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, \n . 2L, 1L, 2L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, \n . 1L, 1L, 2L, 2L, 2L, 1L, 1L, 2L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, 1L, \n . 1L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, \n . 1L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, \n . 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, 1L, 1L, \n . 1L, 2L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, 1L, \n . 1L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, \n . 1L, 1L, 2L, 2L, 2L, 2L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, \n . 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, \n . 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 2L, 2L, 1L, 1L, 1L, 2L, \n . 1L, 2L, 1L, 2L, 1L, 2L, 1L, 2L, 1L, 1L, 2L, 1L, 1L, 2L, 1L, 1L, \n . 1L, 1L, 2L, 2L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, 2L, 1L, 1L, \n . 1L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, \n . 1L, 1L, 2L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, 2L, 2L, \n . 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, 1L, 2L, 2L, 2L, 2L, \n . 1L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, 2L, 1L, 1L, \n . 2L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 2L, 1L, 2L, 1L, 2L, 2L, \n . 1L, 1L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, 2L, 1L, 2L, 2L, 1L, 1L, 2L, \n . 1L, 1L, 2L, 2L, 1L, 1L, 2L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, \n . 1L, 2L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, 1L, 2L, 1L, \n . 1L, 2L, 1L, 2L, 2L, 2L, 1L, 1L, 2L, 2L, 2L, 1L, 2L, 1L, 2L, 1L, \n . 2L, 1L, 1L, 1L, 1L, 2L, 1L), .Label = c(\"0\", \"1\"), class = \"factor\"), \n .     na.rm = FALSE)",
-      "7. stop(gettextf(\"%s not meaningful for factors\", sQuote(.Generic)))",
-      "8. .handleSimpleError(function (e) \n . {\n .     local_call_step(dots = dots, .index = i, .fn = \"summarise\", \n .         .dot_data = inherits(e, \"rlang_error_data_pronoun_not_found\"))\n .     call_step <- peek_call_step()\n .     error_name <- call_step$error_name\n .     if (inherits(e, \"dplyr:::error_summarise_incompatible_combine\")) {\n .         bullets <- c(x = glue(\"Input `{error_name}` must return compatible vectors across groups\", \n .             .envir = peek_call_step()), i = cnd_bullet_combine_details(e$parent$x, \n .             e$parent$x_arg), i = cnd_bullet_combine_details(e$parent$y, \n .             e$parent$y_arg))\n .     }\n .     else if (inherits(e, \"dplyr:::summarise_unsupported_type\")) {\n .         bullets <- c(x = glue(\"Input `{error_name}` must be a vector, not {friendly_type_of(result)}.\", \n .             result = e$result), i = cnd_bullet_rowwise_unlist())\n .     }\n .     else if (inherits(e, \"dplyr:::summarise_incompatible_size\")) {\n .         peek_mask()$set_current_group(e$group)\n .         bullets <- c(x = glue(\"Input `{error_name}` must be size {or_1(expected_size)}, not {size}.\", \n .             expected_size = e$expected_size, size = e$size), \n .             i = glue(\"An earlier column had size {expected_size}.\", \n .                 expected_size = e$expected_size))\n .     }\n .     else {\n .         bullets <- c(x = conditionMessage(e))\n .     }\n .     bullets <- c(cnd_bullet_header(), bullets, i = cnd_bullet_input_info())\n .     if (!inherits(e, \"dplyr:::error_summarise_incompatible_combine\")) {\n .         bullets <- c(bullets, i = cnd_bullet_cur_group_label())\n .     }\n .     abort(bullets, class = \"dplyr_error\")\n . }, \"‘max’ not meaningful for factors\", base::quote(Summary.factor(structure(c(2L, \n . 1L, 2L, 1L, 2L, 1L, 2L, 1L, 2L, 2L, 1L, 2L, 1L, 2L, 2L, 2L, 2L, \n . 2L, 1L, 2L, 1L, 1L, 2L, 2L, 2L, 2L, 2L, 1L, 1L, 1L, 1L, 2L, 1L, \n . 1L, 1L, 1L, 1L, 2L, 2L, 2L, 1L, 1L, 1L, 2L, 1L, 2L, 1L, 1L, 2L, \n . 1L, 1L, 1L, 1L, 2L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 2L, \n . 1L, 2L, 1L, 1L, 1L, 2L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, \n . 1L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, \n . 1L, 1L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 2L, 2L, 1L, \n . 1L, 2L, 2L, 2L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, 2L, 1L, 1L, 2L, \n . 2L, 2L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, \n . 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 2L, 2L, 1L, 1L, 1L, 2L, 1L, \n . 1L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, 2L, 1L, \n . 2L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 2L, 2L, 2L, 2L, 2L, 1L, 1L, 2L, \n . 2L, 1L, 2L, 1L, 2L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, \n . 2L, 1L, 1L, 1L, 2L, 2L, 2L, 2L, 1L, 2L, 2L, 2L, 2L, 1L, 1L, 1L, \n . 1L, 1L, 2L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, 2L, 2L, 2L, 2L, 1L, 1L, \n . 1L, 2L, 2L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, \n . 1L, 1L, 2L, 1L, 2L, 1L, 1L, 2L, 1L, 2L, 1L, 1L, 2L, 2L, 1L, 1L, \n . 1L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, 1L, 1L, 2L, 2L, 1L, 1L, 2L, 1L, \n . 1L, 1L, 2L, 2L, 2L, 1L, 1L, 2L, 1L, 2L, 1L, 2L, 2L, 1L, 2L, 1L, \n . 1L, 2L, 1L, 2L, 2L, 1L, 1L, 2L, 1L, 2L, 1L, 1L, 2L, 1L, 2L, 1L, \n . 2L, 2L, 2L, 1L, 1L, 2L, 1L, 2L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, \n . 2L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, \n . 1L, 1L, 2L, 2L, 2L, 1L, 2L, 2L, 1L, 1L, 2L, 1L, 1L, 2L, 1L, 1L, \n . 2L, 2L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, \n . 1L, 2L, 2L, 2L, 1L, 1L, 2L, 1L, 1L, 2L, 1L, 1L, 2L, 1L, 2L, 2L, \n . 1L, 2L, 1L, 2L, 1L, 2L, 1L, 2L, 2L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, \n . 2L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, 2L, 1L, 2L, 1L, 1L, 1L, \n . 1L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 2L, 2L, 2L, 1L, 1L, 2L, \n . 1L, 1L, 2L, 1L, 1L, 1L, 2L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, \n . 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, \n . 1L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, \n . 1L, 2L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, 1L, 1L, \n . 1L, 1L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, \n . 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 2L, 2L, 2L, 2L, 1L, 1L, \n . 2L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, \n . 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, \n . 2L, 1L, 2L, 2L, 1L, 1L, 1L, 2L, 1L, 2L, 1L, 2L, 1L, 2L, 1L, 2L, \n . 1L, 1L, 2L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, 2L, 1L, 1L, \n . 1L, 1L, 2L, 2L, 1L, 2L, 1L, 1L, 1L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, \n . 1L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, 1L, 1L, 2L, 1L, 1L, \n . 1L, 2L, 1L, 1L, 1L, 2L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 1L, \n . 1L, 1L, 2L, 1L, 2L, 2L, 2L, 2L, 1L, 2L, 2L, 1L, 1L, 1L, 1L, 1L, \n . 1L, 1L, 2L, 2L, 1L, 2L, 1L, 1L, 2L, 1L, 2L, 1L, 1L, 1L, 1L, 1L, \n . 2L, 1L, 2L, 1L, 2L, 1L, 2L, 2L, 1L, 1L, 1L, 1L, 2L, 2L, 1L, 1L, \n . 1L, 2L, 1L, 2L, 2L, 1L, 1L, 2L, 1L, 1L, 2L, 2L, 1L, 1L, 2L, 1L, \n . 1L, 2L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 2L, 2L, 2L, 1L, 1L, 1L, 1L, \n . 1L, 1L, 2L, 2L, 1L, 1L, 2L, 1L, 1L, 2L, 1L, 2L, 2L, 2L, 1L, 1L, \n . 2L, 2L, 2L, 1L, 2L, 1L, 2L, 1L, 2L, 1L, 1L, 1L, 1L, 2L, 1L), .Label = c(\"0\", \n . \"1\"), class = \"factor\"), na.rm = FALSE)))",
-      "9. h(simpleError(msg, call))",
-      "10. abort(bullets, class = \"dplyr_error\")",
-      "11. signal_abort(cnd)"
+      "Error in parse(text = x, srcfile = src): <text>:35:1: unexpected symbol\n34:                                        \n35: summary_of_data_diabetes_min\n    ^\nTraceback:\n"
      ]
     }
    ],
@@ -322,8 +261,8 @@
     "                                         min_Insulin = min(Insulin),\n",
     "                                         min_BMI = min(BMI),\n",
     "                                         min_DiabetesPedigreeFunction = min(DiabetesPedigreeFunction),\n",
-    "                                         min_Age = min(Age),\n",
-    "                                         min_Outcome = min(Outcome))\n",
+    "                                         min_Age = min(Age)\n",
+    "                                       \n",
     "summary_of_data_diabetes_min"
    ]
   },
