--- a/data/Group Proposal.ipynb
+++ b/data/Group Proposal.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,9 @@
     }
    ],
    "source": [
-    "diabetes <- read_csv(\"diabetes.csv\")\n",
+    "set.seed(41)\n",
+    "url <- \"https://raw.githubusercontent.com/ehaniak/Group41/main/data/diabetes.csv\"\n",
+    "diabetes <- read_csv(url)\n",
     "diabetes\n",
     "\n",
     "summery_of_data_diabetes_means <- summarize(diabetes,\n",
