--- a/data/Final Group 41.ipynb
+++ b/data/Final Group 41.ipynb
@@ -131,6 +131,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -803,52 +805,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 768 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>SkinThickness</th><th scope=col>Insulin</th><th scope=col>Outcome</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>35</td><td>0</td><td>1</td></tr>\n",
+       "\t<tr><td>29</td><td>0</td><td>0</td></tr>\n",
+       "\t<tr><td> 0</td><td>0</td><td>1</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>23</td><td>112</td><td>0</td></tr>\n",
+       "\t<tr><td> 0</td><td>  0</td><td>1</td></tr>\n",
+       "\t<tr><td>31</td><td>  0</td><td>0</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 768 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " SkinThickness & Insulin & Outcome\\\\\n",
+       " <dbl> & <dbl> & <fct>\\\\\n",
+       "\\hline\n",
+       "\t 35 & 0 & 1\\\\\n",
+       "\t 29 & 0 & 0\\\\\n",
+       "\t  0 & 0 & 1\\\\\n",
+       "\t ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 23 & 112 & 0\\\\\n",
+       "\t  0 &   0 & 1\\\\\n",
+       "\t 31 &   0 & 0\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 768 × 3\n",
+       "\n",
+       "| SkinThickness &lt;dbl&gt; | Insulin &lt;dbl&gt; | Outcome &lt;fct&gt; |\n",
+       "|---|---|---|\n",
+       "| 35 | 0 | 1 |\n",
+       "| 29 | 0 | 0 |\n",
+       "|  0 | 0 | 1 |\n",
+       "| ⋮ | ⋮ | ⋮ |\n",
+       "| 23 | 112 | 0 |\n",
+       "|  0 |   0 | 1 |\n",
+       "| 31 |   0 | 0 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "    SkinThickness Insulin Outcome\n",
+       "1   35            0       1      \n",
+       "2   29            0       0      \n",
+       "3    0            0       1      \n",
+       "⋮   ⋮             ⋮       ⋮      \n",
+       "766 23            112     0      \n",
+       "767  0              0     1      \n",
+       "768 31              0     0      "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "filtered_diabetes <- select(diabetes, SkinThickness, Insulin, Outcome)\n",
+    "filtered_diabetes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table 4: SkinThickness and Insulin "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "ename": "ERROR",
-     "evalue": "Error: Can't add `diabetes_hist_compares` to a ggplot object.\n",
+     "evalue": "Error in ggplot(filterd_diabetes, aes(x = Insulin, fill = as_factor(Outcome))): object 'filterd_diabetes' not found\n",
      "output_type": "error",
      "traceback": [
-      "Error: Can't add `diabetes_hist_compares` to a ggplot object.\nTraceback:\n",
-      "1. `+.gg`(diabetes_hist_compare, diabetes_hist_compares)",
-      "2. add_ggplot(e1, e2, e2name)",
-      "3. ggplot_add(object, p, objectname)",
-      "4. ggplot_add.default(object, p, objectname)",
-      "5. abort(glue(\"Can't add `{object_name}` to a ggplot object.\"))",
-      "6. signal_abort(cnd)"
+      "Error in ggplot(filterd_diabetes, aes(x = Insulin, fill = as_factor(Outcome))): object 'filterd_diabetes' not found\nTraceback:\n",
+      "1. ggplot(filterd_diabetes, aes(x = Insulin, fill = as_factor(Outcome)))"
      ]
     }
    ],
    "source": [
-    "diabetes_hist_compare <- ggplot(diabetes, aes(x = Insulin, fill = as_factor(Outcome))) +\n",
+    "diabetes_hist_compare <- ggplot(filterd_diabetes, aes(x = Insulin, fill = as_factor(Outcome))) +\n",
     "    geom_histogram(alpha = 0.9, position = \"identity\") + \n",
     "    facet_grid(rows = vars(Outcome)) +\n",
     "    geom_vline(xintercept = ((79.79948+20.53646)/2), linetype = \"dashed\", size = 1) +\n",
-    "    labs(x = \"SkinThickness and Insulin\", \n",
+    "    labs(x = \"Insulin\", \n",
     "         y = \"Frequency\", \n",
     "         fill = \"Diabetes Outcome for SkinThickness and Insulin\") +\n",
     "         theme(text = element_text(size = 15)) + \n",
     "    ggtitle(\"The Frequency Diabetes due to Insulin and SKinThickness\") \n",
     "\n",
-    "diabetes_hist_compares <- ggplot(diabetes, aes(x = SkinThickness, fill = as_factor(Outcome))) +\n",
+    "diabetes_hist_compares <- ggplot(filtered_diabetes, aes(x = SkinThickness, fill = as_factor(Outcome))) +\n",
     "    geom_histogram(alpha = 0.9, position = \"identity\") + \n",
     "    facet_grid(rows = vars(Outcome)) +\n",
     "    geom_vline(xintercept = ((79.79948+20.53646)/2), linetype = \"dashed\", size = 1) +\n",
-    "    labs(x = \"SkinThickness and Insulin\", \n",
+    "    labs(x = \"SkinThickness\", \n",
     "         y = \"Frequency\", \n",
     "         fill = \"Diabetes Outcome for SkinThickness and Insulin\") +\n",
     "         theme(text = element_text(size = 15)) + \n",
     "    ggtitle(\"The Frequency Diabetes due to Insulin and SKinThickness\") \n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "diabetes_hist_compare + diabetes_hist_compares\n",
+    "diabetes_hist_compare \n",
+    "diabetes_hist_compares\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
