--- a/data/Final Group 41.ipynb
+++ b/data/Final Group 41.ipynb
@@ -1169,7 +1169,7 @@
    "source": [
     "##### Graph 8: Age in Women, coloured by diabetes diagnosis\n",
     "\n",
-    "As we see above, there is a significant difference in this graph. There are far less women under 30 with diabetes than there are for women ages 30 and higher. When the means of the distributions of women with and without diabetes are compared, we see that (...), suggesting that (...)."
+    "As we see above, there is a significant difference in this graph. There are far less women under 30 with diabetes than there are for women ages 30 and higher. When the means of the distributions of women with and without diabetes are compared, we see that the average age for women with diabetes is higher than for women without diabetes, suggesting that higher age is correlated with having diabetes."
    ]
   },
   {
@@ -1177,88 +1177,6 @@
    "metadata": {},
    "source": [
     "**ClASSIFICATION PREDICTIVE MODEL**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 768 × 3</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>SkinThickness</th><th scope=col>Insulin</th><th scope=col>Outcome</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>35</td><td>0</td><td>1</td></tr>\n",
-       "\t<tr><td>29</td><td>0</td><td>0</td></tr>\n",
-       "\t<tr><td> 0</td><td>0</td><td>1</td></tr>\n",
-       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
-       "\t<tr><td>23</td><td>112</td><td>0</td></tr>\n",
-       "\t<tr><td> 0</td><td>  0</td><td>1</td></tr>\n",
-       "\t<tr><td>31</td><td>  0</td><td>0</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 768 × 3\n",
-       "\\begin{tabular}{lll}\n",
-       " SkinThickness & Insulin & Outcome\\\\\n",
-       " <dbl> & <dbl> & <fct>\\\\\n",
-       "\\hline\n",
-       "\t 35 & 0 & 1\\\\\n",
-       "\t 29 & 0 & 0\\\\\n",
-       "\t  0 & 0 & 1\\\\\n",
-       "\t ⋮ & ⋮ & ⋮\\\\\n",
-       "\t 23 & 112 & 0\\\\\n",
-       "\t  0 &   0 & 1\\\\\n",
-       "\t 31 &   0 & 0\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 768 × 3\n",
-       "\n",
-       "| SkinThickness &lt;dbl&gt; | Insulin &lt;dbl&gt; | Outcome &lt;fct&gt; |\n",
-       "|---|---|---|\n",
-       "| 35 | 0 | 1 |\n",
-       "| 29 | 0 | 0 |\n",
-       "|  0 | 0 | 1 |\n",
-       "| ⋮ | ⋮ | ⋮ |\n",
-       "| 23 | 112 | 0 |\n",
-       "|  0 |   0 | 1 |\n",
-       "| 31 |   0 | 0 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "    SkinThickness Insulin Outcome\n",
-       "1   35            0       1      \n",
-       "2   29            0       0      \n",
-       "3    0            0       1      \n",
-       "⋮   ⋮             ⋮       ⋮      \n",
-       "766 23            112     0      \n",
-       "767  0              0     1      \n",
-       "768 31              0     0      "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "filtered_diabetes <- select(diabetes, SkinThickness, Insulin, Outcome)\n",
-    "filtered_diabetes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Table 4: SkinThickness and Insulin "
    ]
   },
   {
